--- a/packages/hoppscotch-common/assets/scss/styles.scss
+++ b/packages/hoppscotch-common/assets/scss/styles.scss
@@ -30,7 +30,6 @@
   accent-color: var(--accent-color);
   font-variant-ligatures: common-ligatures;
 
-  // Colors
   --info-color: #ec4899;
   --success-color: #10b981;
   --blue-color: #3b82f6;
@@ -261,7 +260,7 @@ a {
 
 hr {
   @apply border-b border-dividerLight;
-  @apply my-2;
+  @apply my-2 #{!important};
 }
 
 .heading {
@@ -525,8 +524,8 @@ pre.ace_editor {
   @apply rounded;
   @apply ml-2;
   @apply px-1;
-  @apply min-w-5;
-  @apply min-h-5;
+  @apply min-w-[1.25rem];
+  @apply min-h-[1.25rem];
   @apply items-center;
   @apply justify-center;
   @apply border border-dividerDark;
