--- a/packages/hoppscotch-common/assets/themes/base-themes.scss
+++ b/packages/hoppscotch-common/assets/themes/base-themes.scss
@@ -38,6 +38,23 @@
   --error-color: #fee2e2;
   --tooltip-color: #262626;
   --popover-color: #ffffff;
+
+  --method-get-color: theme("colors.green.500");
+  --method-post-color: theme("colors.amber.500");
+  --method-put-color: theme("colors.blue.500");
+  --method-patch-color: theme("colors.purple.500");
+  --method-delete-color: theme("colors.red.500");
+  --method-head-color: theme("colors.lime.500");
+  --method-options-color: theme("colors.pink.500");
+  --method-default-color: theme("colors.slate.500");
+
+  --info-color: theme("colors.blue.500");
+  --success-color: theme("colors.green.500");
+  --warning-color: theme("colors.amber.500");
+  --cl-error-color: theme("colors.red.500");
+  --sv-error-color: theme("colors.rose.500");
+  --missing-data-color: theme("colors.slate.500");
+
   --editor-theme: "textmate";
 }
 
@@ -60,6 +77,23 @@
   --error-color: #991b1b;
   --tooltip-color: #f5f5f5;
   --popover-color: #1b1b1b;
+
+  --method-get-color: theme("colors.emerald.500");
+  --method-post-color: theme("colors.yellow.500");
+  --method-put-color: theme("colors.sky.500");
+  --method-patch-color: theme("colors.violet.500");
+  --method-delete-color: theme("colors.rose.500");
+  --method-head-color: theme("colors.teal.500");
+  --method-options-color: theme("colors.indigo.500");
+  --method-default-color: theme("colors.slate.500");
+
+  --info-color: theme("colors.blue.500");
+  --success-color: theme("colors.green.500");
+  --warning-color: theme("colors.amber.500");
+  --cl-error-color: theme("colors.red.500");
+  --sv-error-color: theme("colors.rose.500");
+  --missing-data-color: theme("colors.slate.500");
+
   --editor-theme: "merbivore_soft";
 }
 
@@ -82,5 +116,22 @@
   --error-color: #7f1d1d;
   --tooltip-color: #f5f5f5;
   --popover-color: #0f0f0f;
+
+  --method-get-color: theme("colors.emerald.500");
+  --method-post-color: theme("colors.yellow.500");
+  --method-put-color: theme("colors.sky.500");
+  --method-patch-color: theme("colors.violet.500");
+  --method-delete-color: theme("colors.rose.500");
+  --method-head-color: theme("colors.teal.500");
+  --method-options-color: theme("colors.indigo.500");
+  --method-default-color: theme("colors.slate.500");
+
+  --info-color: theme("colors.blue.500");
+  --success-color: theme("colors.green.500");
+  --warning-color: theme("colors.amber.500");
+  --cl-error-color: theme("colors.red.500");
+  --sv-error-color: theme("colors.rose.500");
+  --missing-data-color: theme("colors.slate.500");
+
   --editor-theme: "twilight";
 }
