--- a/packages/hoppscotch-common/assets/themes/base-themes.scss
+++ b/packages/hoppscotch-common/assets/themes/base-themes.scss
@@ -33,9 +33,10 @@
   --divider-light-color: #f3f4f6;
   --divider-dark-color: #d1d5db;
 
-  --info-color: #fef3c7;
-  --warning-color: #fef9c3;
-  --error-color: #fee2e2;
+  --banner-info-color: theme("colors.stone.100");
+  --banner-warning-color: theme("colors.yellow.100");
+  --banner-error-color: theme("colors.red.100");
+
   --tooltip-color: #262626;
   --popover-color: #ffffff;
 
@@ -48,12 +49,12 @@
   --method-options-color: theme("colors.pink.500");
   --method-default-color: theme("colors.slate.500");
 
-  --info-color: theme("colors.blue.500");
-  --success-color: theme("colors.green.500");
-  --warning-color: theme("colors.amber.500");
-  --cl-error-color: theme("colors.red.500");
-  --sv-error-color: theme("colors.rose.500");
-  --missing-data-color: theme("colors.slate.500");
+  --status-info-color: theme("colors.blue.500");
+  --status-success-color: theme("colors.green.500");
+  --status-redirect-color: theme("colors.amber.500");
+  --status-critical-error-color: theme("colors.red.500");
+  --status-server-error-color: theme("colors.rose.500");
+  --status-missing-data-color: theme("colors.slate.500");
 
   --editor-theme: "textmate";
 }
@@ -72,9 +73,10 @@
   --divider-light-color: #1f1f1f;
   --divider-dark-color: #2d2d2d;
 
-  --info-color: #292524;
-  --warning-color: #854d0e;
-  --error-color: #991b1b;
+  --banner-info-color: theme("colors.stone.800");
+  --banner-warning-color: theme("colors.yellow.800");
+  --banner-error-color: theme("colors.red.800");
+
   --tooltip-color: #f5f5f5;
   --popover-color: #1b1b1b;
 
@@ -87,12 +89,12 @@
   --method-options-color: theme("colors.indigo.500");
   --method-default-color: theme("colors.slate.500");
 
-  --info-color: theme("colors.blue.500");
-  --success-color: theme("colors.green.500");
-  --warning-color: theme("colors.amber.500");
-  --cl-error-color: theme("colors.red.500");
-  --sv-error-color: theme("colors.rose.500");
-  --missing-data-color: theme("colors.slate.500");
+  --status-info-color: theme("colors.blue.500");
+  --status-success-color: theme("colors.green.500");
+  --status-redirect-color: theme("colors.amber.500");
+  --status-critical-error-color: theme("colors.red.500");
+  --status-server-error-color: theme("colors.rose.500");
+  --status-missing-data-color: theme("colors.slate.500");
 
   --editor-theme: "merbivore_soft";
 }
@@ -111,9 +113,10 @@
   --divider-light-color: #181818;
   --divider-dark-color: #323232;
 
-  --info-color: #1c1917;
-  --warning-color: #713f12;
-  --error-color: #7f1d1d;
+  --banner-info-color: theme("colors.stone.900");
+  --banner-warning-color: theme("colors.yellow.900");
+  --banner-error-color: theme("colors.red.900");
+
   --tooltip-color: #f5f5f5;
   --popover-color: #0f0f0f;
 
@@ -126,12 +129,12 @@
   --method-options-color: theme("colors.indigo.500");
   --method-default-color: theme("colors.slate.500");
 
-  --info-color: theme("colors.blue.500");
-  --success-color: theme("colors.green.500");
-  --warning-color: theme("colors.amber.500");
-  --cl-error-color: theme("colors.red.500");
-  --sv-error-color: theme("colors.rose.500");
-  --missing-data-color: theme("colors.slate.500");
+  --status-info-color: theme("colors.blue.500");
+  --status-success-color: theme("colors.green.500");
+  --status-redirect-color: theme("colors.amber.500");
+  --status-critical-error-color: theme("colors.red.500");
+  --status-server-error-color: theme("colors.rose.500");
+  --status-missing-data-color: theme("colors.slate.500");
 
   --editor-theme: "twilight";
 }
