fix: color mismatch

--- a/packages/hoppscotch-common/assets/themes/base-themes.scss
+++ b/packages/hoppscotch-common/assets/themes/base-themes.scss
@@ -47,7 +47,7 @@
   --method-delete-color: theme("colors.red.500");
   --method-head-color: theme("colors.lime.500");
   --method-options-color: theme("colors.pink.500");
-  --method-default-color: theme("colors.slate.500");
+  --method-default-color: theme("colors.gray.500");
 
   --status-info-color: theme("colors.blue.500");
   --status-success-color: theme("colors.green.500");
@@ -69,7 +69,7 @@
   --secondary-light-color: theme("colors.neutral.500");
   --secondary-dark-color: theme("colors.zinc.50");
 
-  --divider-color: theme("colors.neutral.800");
+  --divider-color: #1f1f1f;
   --divider-light-color: #1f1f1f;
   --divider-dark-color: theme("colors.zinc.800");
 
@@ -87,7 +87,7 @@
   --method-delete-color: theme("colors.rose.500");
   --method-head-color: theme("colors.teal.500");
   --method-options-color: theme("colors.indigo.500");
-  --method-default-color: theme("colors.slate.500");
+  --method-default-color: theme("colors.neutral.500");
 
   --status-info-color: theme("colors.blue.500");
   --status-success-color: theme("colors.green.500");
@@ -109,7 +109,7 @@
   --secondary-light-color: theme("colors.neutral.500");
   --secondary-dark-color: theme("colors.neutral.50");
 
-  --divider-color: theme("colors.neutral.800");
+  --divider-color: theme("colors.neutral.900");
   --divider-light-color: theme("colors.neutral.900");
   --divider-dark-color: theme("colors.zinc.800");
 
@@ -127,7 +127,7 @@
   --method-delete-color: theme("colors.rose.500");
   --method-head-color: theme("colors.teal.500");
   --method-options-color: theme("colors.indigo.500");
-  --method-default-color: theme("colors.slate.500");
+  --method-default-color: theme("colors.zinc.500");
 
   --status-info-color: theme("colors.blue.500");
   --status-success-color: theme("colors.green.500");
