fix: set the cursor to the default arrow

--- a/packages/hoppscotch-backend/src/mailer/templates/team-invitation.hbs
+++ b/packages/hoppscotch-backend/src/mailer/templates/team-invitation.hbs
@@ -30,6 +30,7 @@
     a.nohighlight {
       color: inherit !important;
       text-decoration: none !important;
+      cursor: default !important;
     }
 
     a img {
